--- a/index.html
+++ b/index.html
@@ -662,15 +662,9 @@
         height: auto; /* Allow the box to expand/contract based on content */
         /* Removed min-height from CSS, now set dynamically by JS */
 
-        /* --- Changes for Top Alignment --- */
-        /* align-self: start; (changed in media query) */
-
         /* --- Revert to Solid Box Appearance --- */
         border: 10px solid #FFFFFF; /* White border for a solid box */
         background-color: rgba(255, 255, 255, 0.1); /* Slightly transparent background */
-
-        /* Make sure no pseudo-elements are here if you had added them for brackets */
-        /* E.g., remove any &::before, &::after rules if they are present for this selector */
     }
 
     /* MEDIA QUERY FOR FULL DESKTOP (LARGER SCREENS) */
@@ -766,7 +760,7 @@
             grid-area: toads-box; /* Assign to the 'toads-box' area */
             margin-top: 10px; /* Small spacing under the logo */
             width: 220px; /* Adjusted width for tablet */
-            height: auto; /* Allow height to adjust based on content */
+            height: 180px; /* Fixed height for tablet to match mobile aesthetic */
             margin-left: 0;
             margin-right: auto;
             align-self: start; /* Align to top of its grid cell */
@@ -780,7 +774,7 @@
             grid-template-columns: repeat(6, 1fr); /* 6 columns for 12 toads (2 rows) for even spacing */
             gap: 2px;
             width: 100%;
-            height: auto; /* Fill parent box */
+            height: 100%; /* Fill parent box */
             align-content: start; /* Align to content start for tablet */
         }
 
@@ -1513,7 +1507,7 @@
         frogWrap.className = 'frog-wrap';
         const frog = document.createElement('img');
         frog.src = frogImgSrc;
-        frog.alt = "";
+        frog.alt = "Toad icon"; // Added alt text for accessibility
         frog.className = 'frog-peep';
         frog.style.height = '1.2em';
         frog.style.width = '1.2em';
@@ -1549,76 +1543,78 @@
     }
 
     // Function to perform a single peep animation on a specific frog
-    // This function does NOT manage sequence counts or overall timing, just the visual peep.
-    function doPeepAnimation(frogElement, shouldFullyRaise, callback) {
-        if (!frogElement || frogElement.style.opacity === '0') { // Ensure frog exists and is not collected
-            if (callback) callback();
-            return;
-        }
-
-        // If there's a frog still active from the previous peep, instantly retract it
-        if (currentlyPeepingFrog && currentlyPeepingFrog !== frogElement) {
-            resetFrogVisuals(currentlyPeepingFrog);
-            currentlyPeepingFrog.style.opacity = '1'; // Ensure it's visible if it was just retracted from peep
-            currentlyPeepingFrog.style.pointerEvents = 'auto'; // Make it clickable again
-        }
-        currentlyPeepingFrog = frogElement; // Set the current frog that is about to peep
-
-        // Reset visual state before starting the new peep (if it was from a previous peep)
-        resetFrogVisuals(frogElement);
-        frogElement.style.opacity = '1'; // Ensure it's fully visible before starting its peep
-        frogElement.style.pointerEvents = 'auto'; // Make it clickable
-
-        // Peep animation steps
-        // Small delay to ensure CSS classes are applied for transitions to begin smoothly
-        setTimeout(() => {
-            frogElement.classList.add('peeping');
-            frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.add('raised');
-        }, 50);
-
-        // After initial peep animation completes
-        setTimeout(() => {
-            if (frogElement.style.opacity === '0') { // Check if the frog was clicked and collected during its peep
-                if (callback) callback(); // Call completion callback if collected
+    // This function now returns a Promise to ensure sequential execution.
+    function doPeepAnimation(frogElement, shouldFullyRaise) {
+        return new Promise(resolve => {
+            if (!frogElement || frogElement.style.opacity === '0') { // Ensure frog exists and is not collected
+                resolve();
                 return;
             }
 
-            if (shouldFullyRaise) {
-                // Animate to fully raised state
-                frogElement.classList.remove('peeping');
-                frogElement.classList.add('fully-raised');
-                frogElement.closest('.char-frog-wrap').querySelector('.frog-wrap').classList.add('fully-raised');
-                frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.remove('raised');
-                frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.add('lifted');
-
-                // After fully raised, make it disappear (collected animation will handle opacity 0)
-                // The duration of this timeout depends on your CSS transition for 'fully-raised'
-                setTimeout(() => {
-                    if (frogElement.style.opacity !== '0') { // Only modify if not clicked/collected already
-                       frogElement.style.opacity = '0';
-                       frogElement.style.pointerEvents = 'none';
-                    }
-                    currentlyPeepingFrog = null; // Clear reference as this frog is no longer peeping
-                    resetFrogVisuals(frogElement); // Reset classes
-                    if (callback) callback(); // Call completion callback
-                }, 1500); // How long the toad stays fully raised before disappearing/cleanup
-
-            } else {
-                // Just peep and retract
-                frogElement.classList.remove('peeping'); // Remove peeping class to retract
-                frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.remove('raised');
-
-                setTimeout(() => {
-                    currentlyPeepingFrog = null; // Clear reference as this peep is done
-                    resetFrogVisuals(frogElement); // Ensure fully retracted classes are removed
-                    if (callback) callback(); // Call completion callback
-                }, 700); // Duration for retract animation
+            // If there's a frog still active from the previous peep, instantly retract it
+            if (currentlyPeepingFrog && currentlyPeepingFrog !== frogElement) {
+                resetFrogVisuals(currentlyPeepingFrog);
+                currentlyPeepingFrog.style.opacity = '1';
+                currentlyPeepingFrog.style.pointerEvents = 'auto';
             }
-        }, 1000); // Duration of the initial 'peeping' state before deciding next action (fully raise or retract)
+            currentlyPeepingFrog = frogElement; // Set the current frog that is about to peep
+
+            // Reset visual state before starting the new peep (if it was from a previous peep)
+            resetFrogVisuals(frogElement);
+            frogElement.style.opacity = '1'; // Ensure it's fully visible before starting its peep
+            frogElement.style.pointerEvents = 'auto'; // Make it clickable
+
+            // Peep animation steps
+            // Small delay to ensure CSS classes are applied for transitions to begin smoothly
+            setTimeout(() => {
+                frogElement.classList.add('peeping');
+                frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.add('raised');
+            }, 50);
+
+            // After initial peep animation completes
+            setTimeout(() => {
+                if (frogElement.style.opacity === '0') { // Check if the frog was clicked and collected during its peep
+                    currentlyPeepingFrog = null; // Clear reference as it's collected
+                    resolve(); // Resolve the promise
+                    return;
+                }
+
+                if (shouldFullyRaise) {
+                    // Animate to fully raised state
+                    frogElement.classList.remove('peeping');
+                    frogElement.classList.add('fully-raised');
+                    frogElement.closest('.char-frog-wrap').querySelector('.frog-wrap').classList.add('fully-raised');
+                    frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.remove('raised');
+                    frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.add('lifted');
+
+                    // After fully raised, make it disappear (collected animation will handle opacity 0)
+                    setTimeout(() => {
+                        if (frogElement.style.opacity !== '0') { // Only modify if not clicked/collected already
+                           frogElement.style.opacity = '0';
+                           frogElement.style.pointerEvents = 'none';
+                        }
+                        currentlyPeepingFrog = null; // Clear reference as this frog is no longer peeping
+                        resetFrogVisuals(frogElement); // Reset classes
+                        resolve(); // Resolve the promise
+                    }, 1500); // How long the toad stays fully raised before disappearing/cleanup
+
+                } else {
+                    // Just peep and retract
+                    frogElement.classList.remove('peeping'); // Remove peeping class to retract
+                    frogElement.closest('.char-frog-wrap').querySelector('.the-letter').classList.remove('raised');
+
+                    setTimeout(() => {
+                        currentlyPeepingFrog = null; // Clear reference as this peep is done
+                        resetFrogVisuals(frogElement); // Ensure fully retracted classes are removed
+                        resolve(); // Resolve the promise
+                    }, 700); // Duration for retract animation
+                }
+            }, 1000); // Duration of the initial 'peeping' state before deciding next action (fully raise or retract)
+        });
     }
 
     // Schedules an individual peep within the current 4-7 peep sequence
-    function scheduleIndividualRandomPeep() {
+    async function scheduleIndividualRandomPeep() { // Made async
         // If the sequence is completed or not active, stop scheduling individual peeps
         if (!peepSequenceActive || currentPeepsInSequence >= targetPeepsInSequence) {
             peepSequenceActive = false; // Mark current sequence as finished
@@ -1655,21 +1651,20 @@
             shouldFullyRaise = (Math.random() < 0.5) || (currentPeepsInSequence === targetPeepsInSequence);
         }
 
-        // Perform the animation for this single peep
-        doPeepAnimation(frogToAnimate, shouldFullyRaise, () => {
-            // Callback function executed after doPeepAnimation completes its visual part
-            if (shouldFullyRaise) {
-                // If this frog fully raised, it means the player either caught it or missed it.
-                // The current 4-7 peep sequence is considered complete.
-                peepSequenceActive = false; // Mark sequence as finished
-                startNextPeepSequence(); // Schedule the next overall sequence (10-30 sec delay)
-            } else {
-                // If it just peeped and retracted, schedule the next individual peep in this sequence
-                individualPeepSchedulerId = setTimeout(() => {
-                    scheduleIndividualRandomPeep();
-                }, Math.random() * 1000 + 500); // Short random delay between individual peeps (0.5 to 1.5 seconds)
-            }
-        });
+        // Perform the animation for this single peep and await its completion
+        await doPeepAnimation(frogToAnimate, shouldFullyRaise);
+
+        if (shouldFullyRaise) {
+            // If this frog fully raised, it means the player either caught it or missed it.
+            // The current 4-7 peep sequence is considered complete.
+            peepSequenceActive = false; // Mark sequence as finished
+            startNextPeepSequence(); // Schedule the next overall sequence (10-30 sec delay)
+        } else {
+            // If it just peeped and retracted, schedule the next individual peep in this sequence
+            individualPeepSchedulerId = setTimeout(() => {
+                scheduleIndividualRandomPeep();
+            }, Math.random() * 1000 + 500); // Short random delay between individual peeps (0.5 to 1.5 seconds)
+        }
     }
 
     // Starts the overall 10-30 second sequence timer
