--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
         overflow: hidden; /* Ensures content stays within boundaries */
         z-index: 0;
         transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease, opacity 0.2s ease;
-    }
+        width: 180px; /* Adjust this value as needed to fit your widest link comfortably, e.g., 'Contact' */
+            text-align: center; /* Ensures text is centered if it wraps */
+        }
     .main-links .icon {
         display: inline-block; /* Or flex/grid depending on layout */
         width: 1.7em; /* Or whatever size your default icons should be */
