--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
         .desktop-collected-toads-box {
             display: block; /* Show the new desktop box on desktop */
             grid-area: desktop-toads-box; /* Place it in the defined grid area */
-            margin: 0 20px; /* Add horizontal margin for spacing on desktop */
+            margin: 0 0 0 20px; /* Changed: Add margin to the left only for spacing on desktop */
             align-self: end; /* Aligns the box to the very bottom of its grid row in .hero-header */
         }
 
