--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
         .hero-header {
             display: grid;
             /* Make these changes: */
-            grid-template-columns: auto 300px 1fr; /* Order: logo, desktop-toads-box, nav */
+            grid-template-columns: auto 350px 1fr; /* Order: logo, desktop-toads-box, nav */
             grid-template-areas:
                 "logo desktop-toads-box nav"; /* Order: logo, desktop-toads-box, nav */
             align-items: end;
@@ -803,7 +803,7 @@
             margin-top: 10px; /* Small spacing under the logo */
             width: 200px; /* Adjusted width for tablet */
             height: 180px; /* Fixed height for tablet to match mobile aesthetic */
-            margin-left: 50;
+            margin-left: 100px;
             margin-right: auto;
             align-self: start; /* Align to top of its grid cell */
             border: 5px solid #FFFFFF; /* Match mobile border */
@@ -908,6 +908,7 @@
         }
         .hero-image-box {
             width: auto; /* Allow flexbox to size */
+            margin-left: 20px;
             margin: 0; /* Remove auto margins */
         }
         .gallery-grid {
