--- a/index.html
+++ b/index.html
@@ -779,6 +779,7 @@
             box-sizing: border-box;
             position: relative;
             min-height: 180px; /* Adjust as needed */
+            margin-bottom: 20px; /* Add space below the entire header for tablet view */
         }
 
         .hero-logo-col {
